--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,8 @@ data_ingestion:
   source_URL: https://github.com/krishnaik06/datasets/blob/main/summarizer-data.zip?raw=true
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/samsum_dataset
+  tokenizer_name: google/pegasus-cnn_dailymail
